Fix Page spacing

--- a/src/components/Page/Page.module.scss
+++ b/src/components/Page/Page.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/config';
 
 .Page {
-
+  margin-bottom: spacing();
 }
 
 .MainContent {
